test/src/e2e_vm_tests/test_programs/should_fail/impl_invalid_self_type/src/main.sw
script;

trait Trait { }

impl Trait for Self { }

impl Trait for _ { }

impl Self { }

impl _ { }

fn main() {
}
